gcc/testsuite/rust/rustc/ui/issues/issue-66667-function-cmp-cycle.rs
fn first() {
    second == 1 // { dg-error ".E0308." "" { target *-*-* } }
// { dg-error ".E0308." "" { target *-*-* } .-1 }
}

fn second() {
    first == 1 // { dg-error ".E0308." "" { target *-*-* } }
// { dg-error ".E0308." "" { target *-*-* } .-1 }
}

fn bar() {
    bar == 1 // { dg-error ".E0308." "" { target *-*-* } }
// { dg-error ".E0308." "" { target *-*-* } .-1 }
}

fn main() {}

